-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.0
-
None
-
None
-
7eb0abe8cd9f810905ec079e45ece1ed7fc9b9aa
The attached application can be used to reproduce the bug.
In the application the brush for the background color role is set to a solid blue brush. However, the dialog still draws its background with a dialog background texture. Only some areas around the edges are drawn with the brush of the background color role.